--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="home" class="home-section">
         <h1>Welcome to My Portfolio</h1>
-        <p>Hello! I'm [Your Name], a web developer.</p>
+        <p>Hello! I'm justice umah, a web developer.</p>
         <button><a href="#projects">See My Work</a></button>
     </section>
 
@@ -64,7 +64,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 justice umah</p>
     </footer>
 </body>
 </html>
